@@ -6,7 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.release>14</maven.compiler.release>
         <javafx.version>14</javafx.version>
         <project.runtime.mainClass>net.smackem.fxplayground.App</project.runtime.mainClass>
     </properties>
@@ -40,6 +40,7 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
